fix: [PLG-2061]: updating cd module visibilty on subscription page (#14657)
* feat: [PLG-2052]: removign plans page for srm

* feat: [PLG-2052]: removign plans page for srm

* feat: [PLG-2052]: removign plans page for srm

* fix: [PLG-2061]: updating subscription page module visibility

* fix: [PLG-2061]: updating subscription page module visibility

* fix: [PLG-2061]: updating subscription page module visibility

* fix: [PLG-2061]: updating subscription page module visibility

--- a/src/modules/33-auth-settings/pages/subscriptions/SubscriptionsPage.module.scss
+++ b/src/modules/33-auth-settings/pages/subscriptions/SubscriptionsPage.module.scss
@@ -54,6 +54,9 @@
 }
 .moduleSelectCards {
   margin-bottom: 25px !important;
+  overflow-x: scroll !important;
+  width: 1200px !important;
+  height: 150px !important;
   .moduleSelectCard {
     padding: var(--spacing-small) !important;
     cursor: pointer;
